@@ -146,7 +146,7 @@ local
     basis Posix = 
        let open General Word System List Int Real
        in bas POSIX_IO.sml POSIX_PROCESS.sml POSIX_PROCENV.sml BIT_FLAGS.sml 
-              POSIX_FILE_SYS.sml POSIX.sml Posix.sml 
+              POSIX_FILE_SYS.sml POSIX_SIGNAL.sml POSIX.sml Posix.sml 
           end
        end
 in
